--- a/ui/advanced_settings.ui
+++ b/ui/advanced_settings.ui
@@ -66,22 +66,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QSpinBox" name="lambda_box">
-        <property name="toolTip">
-         <string>Lambda for LASSO regression fitting</string>
-        </property>
-        <property name="buttonSymbols">
-         <enum>QAbstractSpinBox::NoButtons</enum>
-        </property>
-        <property name="maximum">
-         <number>1000</number>
-        </property>
-        <property name="value">
-         <number>20</number>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_10">
         <property name="text">
@@ -131,6 +115,28 @@
         </property>
         <property name="value">
          <number>6</number>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QDoubleSpinBox" name="lambda_box">
+        <property name="toolTip">
+         <string>Lambda for LASSO regression fitting</string>
+        </property>
+        <property name="buttonSymbols">
+         <enum>QAbstractSpinBox::NoButtons</enum>
+        </property>
+        <property name="decimals">
+         <number>4</number>
+        </property>
+        <property name="maximum">
+         <double>0.100000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.000500000000000</double>
+        </property>
+        <property name="value">
+         <double>0.002000000000000</double>
         </property>
        </widget>
       </item>
