Implemeted a button to open the current plot in a external web browser to analysis the graph in detail. Cleaning the old temporal html files generated.

--- a/resources.qrc
+++ b/resources.qrc
@@ -4,5 +4,6 @@
         <file>icons/generate.svg</file>
         <file>icons/select_on_canvas.svg</file>
         <file>icons/center_on_point.svg</file>
+        <file>icons/open_in_web_browser.svg</file>
     </qresource>
 </RCC>
