--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -96,6 +96,9 @@
              </item>
              <item>
               <widget class="QToolButton" name="pick_on_map">
+               <property name="cursor">
+                <cursorShape>PointingHandCursor</cursorShape>
+               </property>
                <property name="toolTip">
                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Pick on map with the pointer using any coordinate system, the plugin convert it in geographic coordinates&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
@@ -657,6 +660,9 @@
           </property>
           <item>
            <widget class="QToolButton" name="btm_advanced_settings">
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
             <property name="text">
              <string>Advanced settings</string>
             </property>
@@ -686,6 +692,9 @@
           </item>
           <item>
            <widget class="QToolButton" name="generate_button">
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
             <property name="text">
              <string>Generate</string>
             </property>
@@ -695,6 +704,20 @@
             </property>
             <property name="toolButtonStyle">
              <enum>Qt::ToolButtonTextBesideIcon</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="btm_open_web_browser">
+            <property name="toolTip">
+             <string>Open the current plot in a web browser</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>:/plugins/CCD_Plugin/icons/open_in_web_browser.svg</normaloff>:/plugins/CCD_Plugin/icons/open_in_web_browser.svg</iconset>
+            </property>
+            <property name="autoRaise">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
