Set the start date to 2010 in order to reduce the date range by default

--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -497,6 +497,16 @@
           </item>
           <item row="1" column="0">
            <widget class="QDateEdit" name="start_date">
+            <property name="dateTime">
+             <datetime>
+              <hour>0</hour>
+              <minute>0</minute>
+              <second>0</second>
+              <year>2010</year>
+              <month>1</month>
+              <day>1</day>
+             </datetime>
+            </property>
             <property name="calendarPopup">
              <bool>true</bool>
             </property>
