--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -166,6 +166,9 @@
                 </item>
                 <item>
                  <widget class="QDoubleSpinBox" name="latitude">
+                  <property name="toolTip">
+                   <string>Latitude in geographic coordinates</string>
+                  </property>
                   <property name="buttonSymbols">
                    <enum>QAbstractSpinBox::NoButtons</enum>
                   </property>
@@ -192,6 +195,9 @@
                 </item>
                 <item>
                  <widget class="QDoubleSpinBox" name="longitude">
+                  <property name="toolTip">
+                   <string>Longitude in geographic coordinates</string>
+                  </property>
                   <property name="buttonSymbols">
                    <enum>QAbstractSpinBox::NoButtons</enum>
                   </property>
