Added a new clear markers drawn button

--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file>icons/select_on_canvas.svg</file>
         <file>icons/center_on_point.svg</file>
         <file>icons/open_in_web_browser.svg</file>
+        <file>icons/trash.svg</file>
     </qresource>
 </RCC>
