--- a/ui/advanced_settings.ui
+++ b/ui/advanced_settings.ui
@@ -38,7 +38,7 @@
        </widget>
       </item>
       <item row="0" column="3">
-       <widget class="QDoubleSpinBox" name="chi_box">
+       <widget class="QDoubleSpinBox" name="chi_square">
         <property name="toolTip">
          <string>The chi-square probability threshold for change detection in the range of 0 to 1</string>
         </property>
@@ -69,12 +69,12 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_10">
         <property name="text">
-         <string>minYears:</string>
+         <string>Min Years:</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QDoubleSpinBox" name="minYears_box">
+       <widget class="QDoubleSpinBox" name="min_years">
         <property name="toolTip">
          <string>Factors of minimum number of years to apply new fitting</string>
         </property>
@@ -95,12 +95,12 @@
       <item row="1" column="2">
        <widget class="QLabel" name="label_11">
         <property name="text">
-         <string>numObs:</string>
+         <string>Num Obs:</string>
         </property>
        </widget>
       </item>
       <item row="1" column="3">
-       <widget class="QSpinBox" name="numObs_box">
+       <widget class="QSpinBox" name="num_obs">
         <property name="toolTip">
          <string>The number of observations required to flag a change</string>
         </property>
@@ -119,7 +119,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QDoubleSpinBox" name="lambda_box">
+       <widget class="QDoubleSpinBox" name="lambda_lasso">
         <property name="toolTip">
          <string>Lambda for LASSO regression fitting</string>
         </property>
