Disabled to select the item "---" which separate the bands and indices in the combobox

--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -367,7 +367,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QComboBox" name="band_or_index">
+                 <widget class="QComboBox" name="band_or_index_to_plot">
                   <property name="toolTip">
                    <string>Band or index and predicted curves to display in the plot</string>
                   </property>
