--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>687</width>
-    <height>200</height>
+    <height>0</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>305</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Continuous Change Detection Plugin</string>
