--- a/resources.qrc
+++ b/resources.qrc
@@ -5,7 +5,7 @@
         <file>icons/select_on_canvas.svg</file>
         <file>icons/center_on_point.svg</file>
         <file>icons/open_in_web_browser.svg</file>
-        <file>icons/trash.svg</file>
+        <file>icons/clear.svg</file>
         <file>icons/lock.svg</file>
         <file>icons/open.svg</file>
         <file>icons/save.svg</file>
