Focus on the coordinates action now it shows the marker at that new coordinate set

--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -274,7 +274,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QToolButton" name="center_on_coordinate">
+                 <widget class="QToolButton" name="focus_on_the_coordinates">
                   <property name="cursor">
                    <cursorShape>PointingHandCursor</cursorShape>
                   </property>
