--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -6,15 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>687</width>
-    <height>0</height>
+    <width>633</width>
+    <height>369</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>305</width>
-    <height>0</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Continuous Change Detection Plugin</string>
@@ -47,10 +41,10 @@
      </widget>
     </item>
     <item>
-     <widget class="QWidget" name="widget_12" native="true">
+     <widget class="QWidget" name="MainWidget" native="true">
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
-        <widget class="QWidget" name="widget" native="true">
+        <widget class="QWidget" name="CCD_settings_widget" native="true">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
            <horstretch>0</horstretch>
@@ -58,6 +52,9 @@
           </sizepolicy>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout">
+          <property name="spacing">
+           <number>3</number>
+          </property>
           <property name="leftMargin">
            <number>0</number>
           </property>
@@ -824,7 +821,7 @@
        <item>
         <widget class="QWebView" name="plot_webview" native="true">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -852,15 +849,15 @@
    <header>qgscheckablecombobox.h</header>
   </customwidget>
   <customwidget>
-   <class>QWebView</class>
-   <extends>QWidget</extends>
-   <header location="global">QtWebKitWidgets/QWebView</header>
-  </customwidget>
-  <customwidget>
    <class>QgsMessageBar</class>
    <extends>QFrame</extends>
    <header>qgis.gui</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QWebView</class>
+   <extends>QWidget</extends>
+   <header location="global">QtWebKitWidgets/QWebView</header>
   </customwidget>
  </customwidgets>
  <resources/>
